--- a/src/index.html
+++ b/src/index.html
@@ -65,6 +65,10 @@
 <script src="/assets/Scripts/plugins/sweetalert2.min.js"></script>
 <!-- custom alert style -->
 <link href="/assets/Content/css/sweetalert2.min.css" rel="stylesheet" />
+
+<!-- <script src="/assets/Scripts/jquery.matchHeight.js" type="text/javascript"></script> -->
+<script src="jquery.matchHeight.js" type="text/javascript"></script>
+
     <script src="/assets/Content/default/js/init-script.js"></script>
     <script type="text/javascript">
     // paste this code under head tag or in a seperate js file.
