--- a/src/index.html
+++ b/src/index.html
@@ -14,17 +14,19 @@
     <meta charset="UTF-8">
 
     <!-- <link href="/assets/Content/default/css/main.css" rel="stylesheet" /> -->
-    <link href="/assets/Content/default/css/content/login.css" rel="stylesheet" />
+    <!-- <link href="/assets/Content/default/css/content/login.css" rel="stylesheet" /> -->
     <link href="/assets/Content/default/css/print.css" rel="stylesheet" media="print" />
     <link href="/assets/Content/css/font-awesome.min.css" rel="stylesheet" />
     <link href="/assets/Content/css/jquery-ui.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link href="/assets/Content/css/highcharts.css" rel="stylesheet" />
 
     <script src="/assets/Scripts/main/modernizr.custom.js"></script>
     <script src="/assets/Scripts/main/jquery.min.js"></script>
     <script src="/assets/Scripts/main/jquery-ui.min.js"></script>
     <script src="/assets/Scripts/main/bootstrap.min.js"></script>
+    
 
     <script src="/assets/Scripts/main/fastclick.js"></script>
     <script src="/assets/Scripts/main/jquery.ba-throttle-debounce.min.js"></script>
@@ -45,6 +47,7 @@
     <script src="/assets/Scripts//plugins/jquery.carouFredSel-6.2.1-packed.js"></script>
     <script src="/assets/Scripts//plugins/jquery.selectric.min.js"></script>
     <script src="/assets/Scripts//plugins/jquery.fancybox.pack.js"></script>
+    <!-- <script src="/assets/Scripts/highcharts.js"></script> -->
 
 <!-- Layout -->
 <!-- <script src="js/jquery.matchHeight.js"></script> -->
