update complete myport

--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
   <meta name="format-detection" content="telephone=no">
   <link rel="shortcut icon" href="favicon.ico">
   <meta charset="UTF-8">
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+  <meta http-equiv="Pragma" content="no-cache">
+  <meta http-equiv="Expires" content="0">
 
 
 
@@ -25,7 +28,7 @@
   <link href="https://fonts.googleapis.com/css?family=Kanit" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
     crossorigin="anonymous">
-  <link href="../assets/Content/css/highcharts.css" rel="stylesheet" />
+  <!-- <link href="../assets/Content/css/highcharts.css" rel="stylesheet" /> -->
 
   <script src="../assets/Scripts/main/modernizr.custom.js"></script>
   <script src="../assets/Scripts/main/jquery.min.js"></script>
