--- a/src/index.html
+++ b/src/index.html
@@ -87,6 +87,15 @@
       location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
     }
   </script>
+ <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-118773053-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-118773053-2');
+</script>
 </head>
 
 <body>
